--- a/W15_SyncAsyncImageBillboard/packages.config
+++ b/W15_SyncAsyncImageBillboard/packages.config
@@ -1,6 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Microsoft.Azure.KeyVault.Core" version="1.0.0" targetFramework="net472" />
-  <package id="Newtonsoft.Json" version="10.0.2" targetFramework="net472" />
+  <package id="docfx.console" version="2.48.1" targetFramework="net472" developmentDependency="true" />
+  <package id="Microsoft.Azure.KeyVault.Core" version="3.0.4" targetFramework="net472" />
+  <package id="Microsoft.Rest.ClientRuntime" version="2.3.21" targetFramework="net472" />
+  <package id="Microsoft.Rest.ClientRuntime.Azure" version="3.3.19" targetFramework="net472" />
+  <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net472" />
   <package id="WindowsAzure.Storage" version="9.3.3" targetFramework="net472" />
 </packages>
